# NeuralNetwork

./: LICENSE  README.md  activation.py  before.json  layer.py  main.py  network.json  network.py  network2.json  output.txt  pyproject.toml  test.json
layers/: conv2d.py  dense.py  flatten.py  layer.py  pooling.py
programs/cifar-10/: cifar.py
programs/digitrecognition/: digitrecognition.py
programs/digitrecognition/output/: network.json  out.txt
programs/saveandloadtest/: saveandload.py
programs/test/: convolution.py  convolution2.py  test.py
src/: activation.py  loss.py  network.py
src/examples/: cifar.py  digit_recognition.py  mnist.py  saveandload.py
src/layers/: conv2d.py  dense.py  flatten.py  layer.py  pooling.py
src/ph/: encoder.py  loss.py  metric.py  metrics.py  network.py
src/ph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ph/layers/: activation.py  conv2d.py  dense.py  flatten.py  layer.py  pooling.py
