[project]
name = "ph"
description = "Convolutional neural network library created with Python and Numpy"
authors = [
    {name="Alex Pham", email="alexlpham0209@gmail.com"}
]

version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"

license="MIT"
license-files=["LICENSE"]

dependencies = [
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
    "opt_einsum>=3.4.0",
    "cupy-cuda12x>=13.3.0",
    "tqdm>=4.67.3",
    "keras>=3.8.0",
    "pytest>=9.0.2",
    "matplotlib>=3.10.8"
]

[project.urls]
Homepage = "https://github.com/AlexPham0209/ph"